MAGETWO-90578: Hidden overflow causes issues when dragging internal content types
- remove overflow hidden to fix placeholder drag/drop
- display Tabs border-radius when no individual Tab radius is set

--- a/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/stage/contentblock/_tabs.less
+++ b/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/stage/contentblock/_tabs.less
@@ -124,8 +124,7 @@
     }
 
     .tabs-content {
-        border: 1px solid #ccc;
-        overflow: hidden;
+        border: 1px solid transparent;
         position: relative;
         z-index: 9;
 
